fix(cognito): add missing UserPoolClient validation